--- a/ansible/ansible-playbook.yml
+++ b/ansible/ansible-playbook.yml
@@ -16,4 +16,4 @@
       command: systemctl start docker
 
     - name: Deploy Docker Container
-      command: docker run -itd -p 8081:8081 pravinkr11/star-banking:latest
+      command: docker run -itd -p 8083:8083 pravinkr11/star-Insurance:latest
